--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
         "@wdio/allure-reporter": "^7.0.0"
     },
     "scripts": {
-        "wdio": "wdio run wdio.conf.js"
+        "wdio": "wdio run wdio.conf.js",
+        "allure:serve": "npx allure serve allure-results",
+        "allure:generate" : "npx allure generate allure-results --clean"
     }
 }
