--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,15 +19,24 @@ jobs:
       # - name: Copy History
       #   if: always()
       #   run: cp -r $(pwd)/docs/history/. $(pwd)/allure-results/history
-      - name: Generate Report
-        if: always()
-        run: npm run allure:generate # Name of the allure generate script
-      - name: Upload Results
-        uses: actions/upload-artifact@v1
-        if: always()
-        with:
-          name: allure-results
-          path: ./allure-results # Name of the folder with allure results                    
+      - name: Create Report
+      if: always()
+      # trying to save history of previous runs if it is exists
+      run: cp -r $(pwd)/docs/history/. $(pwd)/allure-results/history || true && npm run report
+    - uses: actions/upload-artifact@v1
+      if: always()
+      with:
+        name: allure-report
+        path: ./allure-report
+      # - name: Generate Report
+      #   if: always()
+      #   run: npm run allure:generate # Name of the allure generate script
+      # - name: Upload Results
+      #   uses: actions/upload-artifact@v1
+      #   if: always()
+      #   with:
+      #     name: allure-results
+      #     path: ./allure-results # Name of the folder with allure results                    
       - name: Publishing Allure artifact to Github Actions
         uses: actions/upload-artifact@v2
         if: always()
