--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,10 +16,18 @@ jobs:
      #  - run: npm config set script-shell "G:\Git\bin\bash.exe"
       - name: run test
         run: npm run wdio # Our name of the headless script
-      - name: Create Report
+      - name: Copy History
         if: always()
-      # trying to save history of previous runs if it is exists
-        run: cp -r $(pwd)/docs/history/. $(pwd)/allure-results/history || true && npm run report
+        run: cp -r $(pwd)/docs/history/. $(pwd)/allure-results/history
+      - name: Generate Report
+        if: always()
+        run: npm run report # Name of the allure generate script
+      - name: Upload Results
+        uses: actions/upload-artifact@v1
+        if: always()
+        with:
+          name: allure-results
+          path: ./allure-results # Name of the folder with allure results                    
       - name: Publishing Allure artifact to Github Actions
         uses: actions/upload-artifact@v2
         if: always()
