--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
         if: always()
         with:
           name: allure-results
-          path: ./allure-results # Name of the folder with allure results                    
+          path: ./autoTests/allure-results # Name of the folder with allure results                    
       - name: Publishing Allure artifact to Github Actions
         uses: actions/upload-artifact@v2
         if: always()
