--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
       - name: run test
         run: npm run wdio # Our name of the headless script
       - name: Copy History
-        working-directory: ./testGithubActions
+        working-directory: testGithubActions
         if: always()
         run: cp -r $(pwd)/docs/history $(pwd)/autoTests/allure-results/history
       - name: Generate Report
