--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,20 +7,21 @@ on:
 jobs:
   test_suite: # Name of the job
       runs-on: ubuntu-20.04 # Choosing OS
-      defaults:
-        run:
-          working-directory: ./autoTests
+      env:
+        working-directory: ./autoTests
       steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: '16.9.1' # In command line run “node -v” and choose your version
-      - run: npm ci
+      - name: npm ci
+        working-directory: ${{env.working-directory}} 
+        run: npm ci
      #  - run: npm config set script-shell "G:\Git\bin\bash.exe"
       - name: run test
+        working-directory: ${{env.working-directory}}
         run: npm run wdio # Our name of the headless script
       - name: Copy History
-        working-directory: testGithubActions
         if: always()
         run: cp -r $(pwd)/docs/history $(pwd)/autoTests/allure-results/history
       - name: Generate Report
