--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,11 +23,13 @@ jobs:
         run: npm run wdio # Our name of the headless script
       - name: Copy History
         if: always()
-        run: cp -r $(pwd)/docs/history $(pwd)/autoTests/allure-results/history
+        run: cp -r $(pwd)/docs/history/. $(pwd)/autoTests/allure-results/history
       - name: Generate Report
+        working-directory: ${{env.working-directory}}
         if: always()
         run: npm run allure:generate # Name of the allure generate script
       - name: Upload Results
+        working-directory: ${{env.working-directory}}
         uses: actions/upload-artifact@v1
         if: always()
         with:
