--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,6 +41,7 @@ jobs:
           name: allure-report
           path: allure-report       
       - name: Deploy report
+        working-directory: ${{env.working-directory}}
         uses: JamesIves/github-pages-deploy-action@4.1.4
         if: always()
         with:
