--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,3 +46,4 @@ jobs:
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: allure-report # The folder the action should deploy.
+          workspace: './autoTests'
