--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,5 +45,5 @@ jobs:
         if: always()
         with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: allure-report # The folder the action should deploy.
-          workspace: './autoTests'
+          folder: autoTests/allure-report # The folder the action should deploy.
+          # workspace: './autoTests'
