--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
      #  - run: npm config set script-shell "G:\Git\bin\bash.exe"
       - name: run test
         working-directory: ${{env.working-directory}}
-        run: npm run wdio # Our name of the headless script
+        run: npm run assignmentsTabs # Our name of the headless script
       - name: Copy History
         if: always()
         run: cp -r $(pwd)/docs/history/. $(pwd)/autoTests/allure-results/history
