--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16.9.1' # In command line run “node -v” and choose your version
+      - name: changeDate format
+        run: $ date +%d.%m.%Y
       - name: npm ci
         working-directory: ${{env.working-directory}} 
         run: npm ci
