--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm run assignmentsTabs:headless # name of the headless script
       - name: Copy History
         if: always()
-        run: cp -r $(pwd)/docs/qaReport/history/. $(pwd)/autoTests/allure-results/history
+        run: cp -r $(pwd)/docs/history/. $(pwd)/autoTests/allure-results/history
       - name: Generate Report
         working-directory: ${{env.working-directory}}
         if: always()
