--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,7 +57,7 @@ jobs:
         uses: cpina/github-action-push-to-another-repository@v1.3
         if: always()
         env:
-          API_TOKEN_GITHUB: ${{ 'TestToken' }} # Instruction where to get token is below
+          API_TOKEN_GITHUB: ${{ secrets.TestToken }} # Instruction where to get token is below
         with:
           source-directory: 'docs'
           destination-github-username: 'Kravch773' # Your username
