--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,27 +40,27 @@ jobs:
         with:
           name: allure-report
           path: allure-report       
-      # - name: Deploy report
-      #   uses: JamesIves/github-pages-deploy-action@4.1.4
-      #   if: always()
-      #   with:
-      #     branch: gh-pages # The branch the action should deploy to.
-      #     folder: autoTests/allure-report # The folder the action should deploy.
       - name: Deploy report
         uses: JamesIves/github-pages-deploy-action@4.1.4
         if: always()
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: autoTests/allure-report # The folder the action should deploy.
-          target-folder: docs
-      - name: Pushes docs to another repository
-        uses: cpina/github-action-push-to-another-repository@v1.3
-        if: always()
-        env:
-          API_TOKEN_GITHUB: ${{ secrets.TestToken }} # Instruction where to get token is below
-        with:
-          source-directory: 'docs'
-          destination-github-username: 'Kravch773' # Your username
-          destination-repository-name: 'Kravch773.github.io' # Name of your repo
-          user-email: ivankravchk0@gmail.com # Your email
-          target-branch: gh-pages
+      # - name: Deploy report
+      #   uses: JamesIves/github-pages-deploy-action@4.1.4
+      #   if: always()
+      #   with:
+      #     branch: gh-pages # The branch the action should deploy to.
+      #     folder: autoTests/allure-report # The folder the action should deploy.
+      #     target-folder: docs
+      # - name: Pushes docs to another repository
+      #   uses: cpina/github-action-push-to-another-repository@v1.3
+      #   if: always()
+      #   env:
+      #     API_TOKEN_GITHUB: ${{ secrets.TestToken }} # Instruction where to get token is below
+      #   with:
+      #     source-directory: 'docs'
+      #     destination-github-username: 'kravch773' # Your username
+      #     destination-repository-name: 'kravch773.github.io' # Name of your repo
+      #     user-email: ivankravchk0@gmail.com # Your email
+      #     target-branch: gh-pages
