--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -38,7 +38,7 @@ jobs:
         if: always()
         with:
           name: allure-report
-          path: allure-report       
+          path: ./autoTests/allure-report       
       - name: Deploy report
         uses: JamesIves/github-pages-deploy-action@4.1.4
         if: always()
