--- a/.github/workflows/test2.yml
+++ b/.github/workflows/test2.yml
@@ -34,12 +34,11 @@ jobs:
           name: allure-results
           path: ./autoTests/allure-results # Name of the folder with allure results                    
       - name: Publishing Allure artifact to Github Actions
-       working-directory: ${{env.working-directory}}
         uses: actions/upload-artifact@v2
         if: always()
         with:
           name: allure-report
-          path: allure-report       
+          path: ./autoTests/allure-report       
       - name: Deploy report
         uses: JamesIves/github-pages-deploy-action@4.1.4
         if: always()
