--- a/autoTests/package.json
+++ b/autoTests/package.json
@@ -20,7 +20,8 @@
     "initiatedServices": "./node_modules/.bin/wdio ./wdio.conf.ts --suite initiatedServices",
     "initiatedServices:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite initiatedServices",
     "allure:serve": "npx allure serve allure-results",
-    "allure:generate": "npx allure generate allure-results --clean"
+    "allure:generate": "npx allure generate allure-results --clean",
+    "allure:open": "allure open"
   },
   "author": "",
   "license": "ISC",
