--- a/autoTests/package.json
+++ b/autoTests/package.json
@@ -15,8 +15,8 @@
     "assignmentsTabs:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite assignmentsTabs",
     "clientPageTabs": "./node_modules/.bin/wdio ./wdio.conf.ts --suite clientPageTabs",
     "clientPageTabs:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite clientPageTabs",
-    "client_SetupPage": "./node_modules/.bin/wdio ./wdio.conf.ts --suite client_SetupPage",
-    "client_SetupPage:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite client_SetupPage",
+    "clientSetupPage": "./node_modules/.bin/wdio ./wdio.conf.ts --suite clientSetupPage",
+    "clientSetupPage:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite clientSetupPage",
     "initiatedServices": "./node_modules/.bin/wdio ./wdio.conf.ts --suite initiatedServices",
     "initiatedServices:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite initiatedServices",
     "allure:serve": "npx allure serve allure-results",
