--- a/autoTests/package.json
+++ b/autoTests/package.json
@@ -19,6 +19,8 @@
     "clientSetupPage:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite clientSetupPage",
     "initiatedServices": "./node_modules/.bin/wdio ./wdio.conf.ts --suite initiatedServices",
     "initiatedServices:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite initiatedServices",
+    "arrivalServices": "./node_modules/.bin/wdio ./wdio.conf.ts --suite arrivalServices",
+    "arrivalServices:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite arrivalServices",
     "allure:serve": "npx allure serve allure-results",
     "allure:generate": "npx allure generate allure-results --clean",
     "allure:open": "allure open"
