--- a/autoTests/package.json
+++ b/autoTests/package.json
@@ -21,6 +21,8 @@
     "initiatedServices:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite initiatedServices",
     "arrivalServices": "./node_modules/.bin/wdio ./wdio.conf.ts --suite arrivalServices",
     "arrivalServices:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite arrivalServices",
+    "departureServices": "./node_modules/.bin/wdio ./wdio.conf.ts --suite departureServices",
+    "departureServices:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite departureServices",
     "allure:serve": "npx allure serve allure-results",
     "allure:generate": "npx allure generate allure-results --clean",
     "allure:open": "allure open"
