--- a/autoTests/package.json
+++ b/autoTests/package.json
@@ -23,6 +23,8 @@
     "arrivalServices:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite arrivalServices",
     "departureServices": "./node_modules/.bin/wdio ./wdio.conf.ts --suite departureServices",
     "departureServices:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite departureServices",
+    "hhgServices": "./node_modules/.bin/wdio ./wdio.conf.ts --suite hhgServices",
+    "hhgServices:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite hhgServices",
     "allure:serve": "npx allure serve allure-results",
     "allure:generate": "npx allure generate allure-results --clean",
     "allure:open": "allure open"
