--- a/autoTests/package.json
+++ b/autoTests/package.json
@@ -25,6 +25,8 @@
     "departureServices:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite departureServices",
     "hhgServices": "./node_modules/.bin/wdio ./wdio.conf.ts --suite hhgServices",
     "hhgServices:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite hhgServices",
+    "preAssignmentServices": "./node_modules/.bin/wdio ./wdio.conf.ts --suite hhgServices",
+    "preAssignmentServices:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite hhgServices",
     "allure:serve": "npx allure serve allure-results",
     "allure:generate": "npx allure generate allure-results --clean",
     "allure:open": "allure open"
