--- a/.github/workflows/hhgServices.yml
+++ b/.github/workflows/hhgServices.yml
@@ -19,9 +19,9 @@ jobs:
       - name: run hhgServices Tests
         working-directory: ${{env.working-directory}}
         run: npm run hhgServices:headless # name of the headless script
-      - name: Copy History
-        if: always()
-        run: cp -r $(pwd)/docs/history/. $(pwd)/autoTests/allure-results/history
+      # - name: Copy History
+      #   if: always()
+      #   run: cp -r $(pwd)/docs/history/. $(pwd)/autoTests/allure-results/history
       - name: Generate Report
         working-directory: ${{env.working-directory}}
         if: always()
