--- a/autoTests/package.json
+++ b/autoTests/package.json
@@ -27,6 +27,9 @@
     "hhgServices:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite hhgServices",
     "preAssignmentsaServices": "./node_modules/.bin/wdio ./wdio.conf.ts --suite preAssignmentServices",
     "preAssignmentServices:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite preAssignmentServices",
+    "preAssignmentHomeSearch:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite preAssignmentHomeSearch",
+    "preAssignmentSchoolSearch:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite preAssignmentSchoolSearch",
+    "preAssignmentTaxBreifing:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite preAssignmentTaxBreifing",
     "universalServices": "./node_modules/.bin/wdio ./wdio.conf.ts --suite universalServices",
     "universalServices:headless": "./node_modules/.bin/wdio ./wdio.chrome.headless.conf.ts --suite universalServices",
     "onAssignment": "./node_modules/.bin/wdio ./wdio.conf.ts --suite onAssignment",
